<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleQuiz"
        android:padding="30dp"
        android:id="@+id/IDquestion_text_view"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:padding="30dp"
        android:id="@+id/IDquestions"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_true"
            android:id="@+id/IDtrue_button"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_false"
            android:id="@+id/IDfalse_button"
            />

    </LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_next"
        android:id="@+id/IDnext_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointsVal"
        android:padding="30dp"
        android:id="@+id/IDpoints"
        />

</LinearLayout>